--- a/static/index.html
+++ b/static/index.html
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="report-label"><span class="label-number">4.</span>Select a Report Type</label>
+                            <label class="report-label"><span class="label-number">4.</span>Select a Report</label>
                             <div class="report-type-list">
                                 <div class="list-group" id="report-list">
                                 </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" disabled="disabled">Generate Report</button>
+                    <button type="button" class="btn btn-primary" id="create-report-button">Generate Report</button>
                 </div>
             </div>
         </div>
