--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
     <link href="css/vendor/Control.MiniMap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+    <script data-main="js/app" src="js/require.js"></script>    
 </head>
 <body>
     <header>
@@ -447,6 +448,5 @@
     <script src="js/vendor/underscore.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/bootstrap-slider.js"></script>
-    <script src="js/app.js"></script>
 </body>
 </html>
