broke up app.js into requirejs modules

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,6 @@
     <link href="css/vendor/Control.MiniMap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <script data-main="js/app" src="js/require.js"></script>    
 </head>
 <body>
     <header>
@@ -440,13 +439,14 @@
       </div>
     </script>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/leaflet.0.7.2.js"></script>
-    <script src="js/vendor/leaflet.draw.js"></script>
-    <script src="js/vendor/Control.MiniMap.js"></script>
-    <script src="js/vendor/handlebars.js"></script>
-    <script src="js/vendor/underscore.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/vendor/bootstrap-slider.js"></script>
+    <script src="js/lib/jquery.js"></script>
+    <script src="js/lib/leaflet.0.7.2.js"></script>
+    <script src="js/lib/leaflet.draw.js"></script>
+    <script src="js/lib/Control.MiniMap.js"></script>
+    <script src="js/lib/handlebars.js"></script>
+    <script src="js/lib/underscore.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap-slider.js"></script>
+    <script data-main="js/app/main" src="js/lib/require.js"></script>    
 </body>
 </html>
