blue-to-orange now default ramp

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
                 <input type="text" class="opacity-slider" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100" data-slider-tooltip="hide">
             </div>
             <div class="tool tool-lg left tool-ramp">
-                <img id="active-ramp" class="ramp-img" src="img/ramps/blue-to-red.png">
+                <img id="active-ramp" class="ramp-img" src="img/ramps/blue-to-orange.png">
                 <span class="ramp-low">Low</span>
                 <span class="ramp-high">High</span>
             </div>
