--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
                 <div class="tool-title">Find Address</div>
             </div>
             <div class="tool tool-lg left tool-opacity">
-                <div class="tool-title">Priority Map Opacityacity</div>
+                <div class="tool-title">Priority Map Opacity</div>
                 <input type="text" class="opacity-slider" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100" data-slider-tooltip="hide">
             </div>
             <div class="tool tool-lg left tool-ramp">
